[package]
name = "bamegoy"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]

[dependencies]
glutin = "0.7.4"
glium = "0.16.0"
log = "0.3.7"
log-panics = "1.1.0"
cpal = "0.4.5"
bitflags = { git = "https://github.com/rust-lang-nursery/bitflags" }

[dependencies.conrod]
features = ["winit", "glium"]
version = "0.51.1"

[profile.release]
lto = true
