[package]
name = "bamegoy"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]

[dependencies]
glutin = "0.8.1"
glium = "0.16.0"
log = "0.3.7"
log-panics = "1.1.0"
cpal = "0.4.5"
bitflags = "0.9.1"
image = "0.13.0"
enum_primitive = "0.1.1"

[dependencies.conrod]
features = ["winit", "glium"]
version = "0.52.0"

[profile.release]
lto = true
